@@ -1,6 +1,6 @@
 /* -*- C -*-
  *  Mathlib : A C Library of Special Functions
- *  Copyright (C) 1998-2012  The R Core Team
+ *  Copyright (C) 1998-2013  The R Core Team
  *  Copyright (C) 2004       The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -344,9 +344,9 @@ double  Rlog1p(double);
 
 #if !defined(R_NO_REMAP_RMATH)
 
-#if !defined(R_NO_REMAP_RMATH2)
+#if !defined(__cplusplus) && !defined(R_NO_REMAP_RMATH2)
 /* 'trunc' causes problems with C++ iostream headers */
-#define	rround	fround
+//#define	rround	fround
 #define	prec	fprec
 #undef trunc
 #define	trunc	ftrunc
