@@ -265,7 +265,8 @@
       \item Remapping in the \file{Rmath.h} header can be suppressed by
       defining \samp{R_NO_REMAP_RMATH}.  (Problems with the remapped
       names have been seen in C++11 headers.  Less remapping can be
-      selected by defining only \samp{R_NO_REMAP_RMATH2}.)
+      selected by defining only \samp{R_NO_REMAP_RMATH2}, which is done
+      for C++ code.)
     }
   }
 
